fix: if no download link returned by api, then don't navigate. Should also fix the horizontal scroll issue.

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -2,6 +2,10 @@ body,
 html,
 #___gatsby {
   height: 100%;
+  width: 100%;
+  margin:0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 body {
